[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/boss1.png" type="Texture" id=1]
[ext_resource path="res://Src/Enemies/Boss1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/Sounds/shoot1.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_phase1"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.15
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 1 ), Vector2( 3, 1 ), Vector2( 2, 1 ), Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "really_dead"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 1 ), Vector2( 3, 1 ), Vector2( 2, 1 ), Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.713, 13.9354 )

[node name="Boss1" type="KinematicBody2D" groups=[
"Enemy",
"Spawn",
]]
collision_layer = 4
collision_mask = 18
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )
anims/Attack = SubResource( 2 )
anims/Die = SubResource( 5 )
anims/Disappear = SubResource( 3 )

[node name="Phase1WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="Phase1ShootTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.06067, -3.18198 )
shape = SubResource( 4 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.057
max_distance = 400.0
attenuation = 1.68179
bus = "Sound"

[node name="bullets" type="Node2D" parent="."]
[connection signal="timeout" from="Phase1WaitTimer" to="." method="_on_Phase1WaitTimer_timeout"]
[connection signal="timeout" from="Phase1ShootTimer" to="." method="_on_Phase1ShootTimer_timeout"]
